--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Bicicletas Elétricas</title>
-    <link rel="preload" href="css/style.css">
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <meta name="description"
         content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
@@ -37,9 +37,10 @@
                 </p>
                 <a href="bicicletas.html" class="botao">Escolha a sua</a>
             </div>
-            <div class="introducao-imagem">
-                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta.">
-            </div>
+            <picture class="introducao-imagem">
+                <source media="(max-width: 800px)" srcset="./images/bicicletas/nimbus.jpg">
+                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta." width="1280" height="1600">
+            </picture>
         </div>
     </main>
     <article class="bicicletas-lista">
@@ -54,14 +55,14 @@
             </li>
             <li>
                 <a href="./bicicletas/nimbus.html">
-                    <img src="images/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+                    <img src="images/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" width="920" height="1040">
                     <h3 class="font-1-xl">Nimbus Stark</h3>
                     <span class="font-2-m c008">R$ 4999</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nebula.html">
-                    <img src="images/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+                    <img src="images/bicicletas/nebula-home.jpg" alt="Bicicleta preta" width="920" height="1040">
                     <h3 class="font-1-xl">Nebula Cosmic</h3>
                     <span class="font-2-m c008">R$ 3999</span>
                 </a>
@@ -79,13 +80,13 @@
                 <a class="link" href="./bicicletas.html">Escolha o modelo</a>
                 <div class="tecnologias-vantagens">
                     <div>
-                        <img src="./images/icones/eletrica.svg" alt="">
+                        <img src="./images/icones/eletrica.svg" alt="" width="24" height="24">
                         <h3 class="font-1-m w">Motor elétrico</h3>
                         <p class="font-2-s c005">Toda Bikcraft é equipada com um motor elétrico que possui duração de
                             até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
                     </div>
                     <div>
-                        <img src="./images/icones/rastreador.svg" alt="">
+                        <img src="./images/icones/rastreador.svg" alt="" width="24" height="24">
                         <h3 class="font-1-m w">Rastreador</h3>
                         <p class="font-2-s c005">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
                             rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
@@ -93,7 +94,7 @@
                 </div>
             </div>
             <div class="tecnologias-imagem">
-                <img src="images/fotos/tecnologia.jpg" alt="">
+                <img src="images/fotos/tecnologia.jpg" alt="" width="1200" height="1920">
             </div>
         </div>
 
@@ -101,19 +102,20 @@
     <section class="parceiros" aria-label="Nossos Parceiros">
         <h2 class="bicicletas-lista-titulo font-1-xxl container">nossos parceiros<span class="span-cp001">.</span></h2>
         <ul>
-            <li><img src="./images/parceiros/caravan.svg" alt="Caravan"></li>
-            <li><img src="./images/parceiros/ranek.svg" alt="Ranek"></li>
-            <li><img src="./images/parceiros/handel.svg" alt="Handel"></li>
-            <li><img src="./images/parceiros/dogs.svg" alt="Dogs"></li>
-            <li><img src="./images/parceiros/lescone.svg" alt="Lescone"></li>
-            <li><img src="./images/parceiros/flexblog.svg" alt="FlexBlog"></li>
-            <li><img src="./images/parceiros/wildbeast.svg" alt="WildBeast"></li>
-            <li><img src="./images/parceiros/surfbot.svg" alt="Surfbot"></li>
+            <li><img src="./images/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
+            <li><img src="./images/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
+            <li><img src="./images/parceiros/handel.svg" alt="Handel" width="139" height="50"></li>
+            <li><img src="./images/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
+            <li><img src="./images/parceiros/lescone.svg" alt="Lescone" width="208" height="41"></li>
+            <li><img src="./images/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
+            <li><img src="./images/parceiros/wildbeast.svg" alt="WildBeast" width="196" height="34"></li>
+            <li><img src="./images/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
         </ul>
     </section>
     <section class="depoimento" aria-label="Depoimento">
         <div>
-            <img src="images/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+            <img src="images/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft" width="1560"
+                height="1360">
         </div>
         <div class="depoimento-conteudo">
             <blockquote class="font-1-xl cp005">
@@ -154,7 +156,7 @@
     </article>
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="./images/bikcraft.svg" alt="Bikcraft">
+            <img src="./images/bikcraft.svg" alt="Bikcraft" width="136" height="32">
             <div class="footer-contato">
                 <h3 class="font-2-l-b w">Contato</h3>
                 <ul class="font-2-m c005">
@@ -165,13 +167,13 @@
                 </ul>
                 <div class="footer-redes">
                     <a href="./">
-                        <img src="./images/redes/instagram.svg" alt="Instagram">
+                        <img src="./images/redes/instagram.svg" alt="Instagram" width="32" height="32">
                     </a>
                     <a href="./">
-                        <img src="./images/redes/facebook.svg" alt="Facebook">
+                        <img src="./images/redes/facebook.svg" alt="Facebook" width="32" height="32">
                     </a>
                     <a href="./">
-                        <img src="./images/redes/youtube.svg" alt="Youtube">
+                        <img src="./images/redes/youtube.svg" alt="Youtube" width="32" height="32">
                     </a>
                 </div>
             </div>
