--- a/orcamento.html
+++ b/orcamento.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orçamento | Bikcraft</title>
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <meta name="description"
         content="Orçamento de bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente.">
